--- a/css/style.css
+++ b/css/style.css
@@ -372,3 +372,29 @@ body {
 #map {
     height: 100%;
 }
+
+label {
+    width: 100%;
+}
+
+.card-input-element {
+    display: none;
+}
+
+.card-input {
+    margin: 10px;
+    padding: 00px;
+}
+
+.card-input:hover {
+    cursor: pointer;
+}
+
+.card-input-element:checked+.card-input {
+    box-shadow: 0 0 1px 1px #2ecc71;
+}
+
+.backwhite {
+    background: white;
+    padding: 15px 15px 15px 15px;
+}
